<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WAP Service</string>
    <string name="common_btn_ok">OK</string>
    <string name="common_btn_cancel">Cancel</string>
    <string name="common_empty_padding" />
    <string name="prov_received_ticker">Setting message received</string>
    <string name="prov_received_title">Setting message</string>
    <string name="prov_received_message">Click here to install phone settings</string>
    <string name="prov_install_success_message">A new setting is installed successfully</string>
    <string name="prov_validation_failure_message">Invalid setting message! Settings are not installed.</string>
    <string name="sp_prov_toast_setup_completed_NORMAL">Setup completed</string>
    <string name="prov_pincode_enter_title">Enter PIN code:</string>
    <string name="prov_pincode_remain">[Remaining:</string>
    <string name="prov_pincode_remain_end">]</string>
    <string name="sp_prov_pincode_enter_notification_NORMAL">You have 3 attempts at entering PIN code.</string>
    <string name="prov_pincode_no_auth_information">No authentication information</string>
    <string name="prov_pincode_popup_title_incorrect">PIN code</string>
    <string name="sp_prov_pincode_popup_wrong_title_SHORT">Wrong PIN code</string>
    <string name="prov_pincode_popup_message_incorrect">Authentication unsuccessful. Try again.</string>
    <string name="prov_pincode_popup_message_incorrect_network_pin">Authentication unsuccessful. Settings cannot be installed on your device.</string>
    <string name="prov_pincode_popup_message_incorrect_discard">"0 remaining counts. 
Message discarded."</string>
    <string name="prov_pincode_popup_message_incorrect_discard_title">Message discarded</string>
    <string name="provviewer_install_message">The following settings will be installed on your device</string>
    <string name="provviewer_setting_name_title">Setting name:</string>
    <string name="provviewer_setting_type">Setting type:</string>
    <string name="provviewer_setting_type_value_apn">APN</string>
    <string name="provviewer_setting_type_value_mms">MMS</string>
    <string name="provviewer_setting_type_value_browser">Browser</string>
    <string name="provviewer_setting_type_value_Email">E-mail</string>
    <string name="provviewer_setting_type_value_SyncML">SyncML</string>
    <string name="provviewer_setting_type_value_Fota">DM</string>
    <string name="provviewer_setting_type_value_WIFI">Wi-Fi</string>
    <string name="provviewer_setting_type_value_Community">Community</string>
    <string name="provviewer_setting_type_value_unkown">Unknown application</string>
    <string name="push_received_ticker">Service message received</string>
    <string name="push_received_title">Service message</string>
    <string name="push_received_message">Click here to see service message</string>
    <string name="pushviewer_retrieve">Retrieve</string>
    <string name="pushviewer_href">Link URL:</string>
    <string name="pushviewer_content">Message:</string>
    <string name="pushviewer_sender">Sender address:</string>
    <string name="pushviewer_infomation">Information:</string>
    <string name="prov_browser_setting">Browser setting</string>
    <string name="prov_mms_setting">MMS setting</string>
    <string name="prov_email_setting">E-mail setting</string>
    <string name="test_banner">Press the buttons below to test provisioning application</string>
    <string name="test_userpin">Send PDUs to notification system (user pin)</string>
    <string name="test_netwpin">Send PDUs to notification system (network pin)</string>
    <string name="test_usernetwpin">Send PDUs to notification system (user network pin)</string>
    <string name="test_userpinmac">Send PDUs to notification system (user pin mac)</string>
    <string name="test_confirm">Confirm screen</string>
    <string name="test_error">Error screen</string>
    <string name="test_wap_userpin">Send WAP</string>
    <string name="test_mms_userpin">Send MMS</string>
    <string name="test_wap_mms_userpin">Send WAP AND MMS</string>
    <string name="test_wap_mms_combined_apn_userpin">Send WAP AND MMS with same NAPDEF</string>
    <string name="test_email">Send e-mail</string>
    <string name="test_syncml_dm">Send SyncML DM</string>
    <string name="test_syncml_ds">Send SyncML DS</string>
    <string name="test_si">Send SI</string>
    <string name="test_sl">Send SL</string>
    <string name="setting_message_configured">The setting message is already configured..</string>
    <string name="title_service_message_security">Service message</string>
    <string name="title_service_message_security_set">Service security set</string>
    <string name="title_service_message_trusted_list">Trusted list</string>
    <string name="array_item_service_security_set">Service security set</string>
    <string name="array_item_trusted_list">Trusted list</string>
    <string name="array_item_untrusted_list">Untrusted list</string>
    <string name="array_item_message_receive">Receive message</string>
    <string name="array_item_service_loading">Service loading</string>
    <string name="service_loading_default">Prompt</string>
    <string name="button_add_new_sender">New sender</string>
    <string name="button_delete_sender">Delete</string>
    <string name="trusted_sender_list_menu_move">Move to untrusted list</string>
    <string name="untrusted_sender_list_menu_move">Move to trusted list</string>
    <string name="sender_list_menu_delete">Delete</string>
    <string name="no_trusted_sender">No trusted sender</string>
    <string name="no_untrusted_sender">No untrusted sender</string>
    <string name="number_validation_problem">Sorry, there is a problem with the number, Please check it and try again.</string>
    <string name="sender_edit_title">Edit Sender</string>
    <string name="sender_insert_title">Add Sender</string>
    <string name="smsc_address_field_error">SMSC Address should be filled</string>
    <string name="originating_address_field_error">Originating Address should be filled</string>
    <string name="title_trusted_list">Trusted list</string>
    <string name="title_untrusted_list">Untrusted list</string>
    <string name="sender_edit_option_menu_save">Save</string>
    <string name="sender_edit_option_menu_discard">Discard</string>
    <string name="sender_edit_smsc_address">SMSC address</string>
    <string name="sender_edit_origin_address">Originating address</string>
    <string name="sender_edit_not_set">&lt;Not set></string>
    <string name="sender_delete_list_option_menu_selectall">Select all</string>
    <string name="sender_delete_list_option_menu_deselectall">Deselect all</string>
    <string name="toast_service_security_set_saved">Service security setting saved</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_title">Move</string>
    <string name="unknown_sender_update_ticker">Unknown sender update ticker</string>
    <string name="unknown_sender_update_title">Unknown sender update title</string>
    <string name="unknown_sender_update_message">Unknown sender update message</string>
    <string name="sender_list_update_title">Sender list update</string>
    <string name="sender_update_process">Process</string>
    <string name="sender_update_not_process">Do not process</string>
    <string name="sender_update_whitelist">Add to trusted list and process</string>
    <string name="sender_update_blacklist">Add to untrusted list and do not process</string>
    <string name="directloading_setting_always">Always</string>
    <string name="directloading_setting_prompt">Prompt</string>
    <string name="directloading_setting_disable">Disable</string>
    <string name="prov_message_completely_install">Completely installed.</string>
    <string name="prov_message_incorrect_pin">"Incorrect PIN code.
Installation is not available."</string>
    <string name="prov_toast_unsupported_file">Cannot open. The file is not supported on this program.</string>
    <string name="sp_service_update">Service Update</string>
    <string name="sp_update_internet_settings">Update your internet settings.</string>
    <string name="prov_received_msgs_title">new setting messages</string>
    <string name="push_received_msgs_title">new service messages</string>
    <string name="prov_indicator_receive_msg">Update message received</string>
    <string name="prov_notification_title_single">Update message</string>
    <string name="prov_notification_title_plural">%d new update messages</string>
    <string name="prov_notification_msg">Tap to update phone settings</string>
    <string name="prov_popupdlg_update_appid">"You can update the settings of the following:
"</string>
    <string name="prov_popupdlg_update_later">Tap No to update later in %s. Update now?</string>
    <string name="messaging_app_label">Messaging</string>
    <string name="common_btn_yes">Yes</string>
    <string name="common_btn_no">No</string>
    <string name="prov_popupdlg_update_completed">Update complete.</string>
    <string name="prov_popupdlg_authenticate_incomplete">Authentication is incomplete. Try again.</string>
    <string name="prov_popupdlg_message_deleted">Three attempts is made. Update message has been deleted.</string>
    <string name="prov_popupdlg_netpin_message_deleted">Authentication is incomplete. Update message has been deleted.</string>
    <string name="prov_popupdlg_move_to_messaging" formatted="false">You have %d additional update messages. Go to %s?</string>
    <string name="prov_toastmsg_install_fail">Check settings and try again</string>
    <string name="prov_toastmsg_update_complete">Update complete</string>
    <string name="prov_make_visible_userpin">Show PIN</string>
</resources>
