<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/button_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layoutDirection="ltr">
        <Button android:layout_gravity="start" android:id="@id/pin_cancel" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/common_btn_cancel" android:layout_weight="0.4" android:paddingStart="6.0dip" />
        <View android:id="@id/buttons_spacer_left" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.2" />
        <Button android:layout_gravity="end" android:id="@id/pin_ok" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/common_btn_ok" android:layout_weight="0.4" android:paddingEnd="6.0dip" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/button_bar" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <include layout="@layout/prov_viewer_banner" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="16.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorSecondary" android:id="@id/sp_prov_pincode_enter_notification_NORMAL" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sp_prov_pincode_enter_notification_NORMAL" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="?android:textColorSecondary" android:id="@id/prov_pincode_enter_title" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/prov_pincode_enter_title" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" />
                <CheckBox android:layout_gravity="end" android:id="@id/prov_visible_userpin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prov_make_visible_userpin" />
                <EditText android:id="@id/user_supplied_pin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:singleLine="true" android:inputType="numberPassword" />
                <LinearLayout android:id="@id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="?android:textColorSecondary" android:id="@id/RemainStart" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prov_pincode_remain" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" />
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="?android:textColorSecondary" android:id="@id/RemainNumVeiw" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" />
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="?android:textColorSecondary" android:id="@id/RemainEnd" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prov_pincode_remain_end" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>